Add appointments && Sync with backend changes
